fixed image stretching
Fixes #57

--- a/static/stylus/paper.styl
+++ b/static/stylus/paper.styl
@@ -551,6 +551,9 @@
 					position absolute
 					transform rotate(-90deg)
 
+					width auto
+					height 314px
+
 			&.flipped img
 				transform rotate(180deg)
 
